# custom-package-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
democorp_airflow/: __init__.py
democorp_airflow/hooks/: example.py
democorp_airflow/operators/: example.py
tests/: conftest.py
tests/democorp_airflow/hooks/: test_example.py
tests/democorp_airflow/operators/: test_example.py
